test/parse/fail/lparen.em
# Lparen with no rparen
# Expect failure

abcd ( efg
